ontopia-core/src/test/resources/net/ontopia/testdata/ltm/error/baseuri-double.ltm

#BASEURI "http://psi.ontopia.net/"
#BASEURI "http://www.ontopia.net/"

[ontopia = "Ontopia"
 @"ontopia/ontopia.xtm#ontopia"]